--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h1 style="font-family: Arial, Helvetica, sans-serif;"> This is my first attempt at using html </h1>
         <p style="font-style: italic;"> This is my first paragraph </p>
         <h2> This is my second header </h2>
-        <img src="https://www.google.com/imgres?q=scott%20scale%20970&imgurl=https%3A%2F%2Fasset.scott-sports.com%2Ffit-in%2F2000x2000%2F290%2F290179_1920382_2.png%3Fsignature%3D53026d15f65f2420a5e15c472834dc8ebc638d61348f80e9dc3a27c5a0f9e13b&imgrefurl=https%3A%2F%2Fwww.scott-sports.com%2Fus%2Fen%2Fproduct%2Fscott-scale-970-red-bike&docid=JuvIXz5x7ww-yM&tbnid=gZaoknrYtUPnnM&vet=12ahUKEwiDgrLI5rmLAxVAk4kEHQ-QDJkQM3oECBcQAA..i&w=2000&h=2000&hcb=2&ved=2ahUKEwiDgrLI5rmLAxVAk4kEHQ-QDJkQM3oECBcQAA" width="200" height="200">
+        <img src="avgchild.png" width="200" height="200">
    </body>
 </html>
