--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h1 style="font-family: Arial, Helvetica, sans-serif;"> This is my first attempt at using html </h1>
         <p style="font-style: italic;"> This is my first paragraph </p>
         <h2> This is my second header </h2>
-        <img src="avgchild.png" width="200" height="200">
+        <img src="avgchild.PNG" width="200" height="200">
    </body>
 </html>
