--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> Homework 04 </title>
+        <title> About Me: Elliot Potila </title>
             </head>
     <body>
         <h1 style="font-family: Arial, Helvetica, sans-serif;"> This is my first attempt at using html </h1>
