--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> Homework 04 </title>
+        <title> About Me: Elliot Potila </title>
             </head>
     <body>
-        <h1 style="font-family: Arial, Helvetica, sans-serif;"> This is my first attempt at using html </h1>
-        <p style="font-style: italic;"> This is my first paragraph </p>
-        <h2> This is my second header </h2>
-        <img src="images/avgchild.PNG" width="200" height="200">
+        <h1 style="font-family: Arial, Helvetica, sans-serif;"> About Me: Elliot Potila </h1>
+        <img src="images/aboutme.jpg" width="200" height="200">
+        <p> Hey there, my name is Elliot, and I am a junior in Games & Interactive Media here at MSU. I am from Munising, Michigan, a small time in the Upper Peninsula, and such love to spend my free time exploring nature.
+             I decided to change my major to Games & Interactive Media during my sophomore year because Computer Science did not feel like the right fit for me, and I've always been interested in video games since a young age, from spending time playing 
+            Lego Star Wars: The Complete Saga with my dad, to playing multiplayer games with my friends in high school.  </p>
+        <h2> Mountain Biking: a lifelong hobby </h2>
+        <p> Mountain Biking is a hobby that I picked since learning how to bike at the age of 13. I genuinely believe that Mountain Biking is one of the best hobbies that anyone can have, as people of any skill can go mountain biking, and it's a fun way to get excercise in and explore nature.
+         </p>
+        <h3>Types of trails and difficulty levels</h3>
+        <p>There are various skill levels and styles of trails that you can consider when you go biking.</p>
+        <p> As far as skill ratings go, there are typically Green (Easy), Blue (Intermediate), Black Diamond (Difficult), and Double Black Diamond (Expert) </p>
+        <p> There are also multiple styles of trails, from fast-paced jump trails, to tech trails that challenge your skills of maneuvering on your bike, and then my personal favorite type: flow trails. Flow trails don't require you to have a ton of skill, but instead let's you just go as fast as possible.</p>
+        <h3> Gear needed to get started </h3>
+        <p>The best part about mountain biking, is that while you can spend thousands of dollars to get a really nice bike, a solid helmet, a water bottle, and a random bike from your garage is all you really need to get started.</p>
+        <h4>Resources and Useful Websites</h4>
+        <p>There are a lot of useful resources if you are interested in Mountian Biking, which I will link to below. </p>
+        <p> WorldWideCyclery and BackCountry are both resources for actually purchasing Mountain Biking Supplies.</p>
+        <p> ParkTool is also an online shop, but it is also a very useful database of information on how to repair your bike.</p>
+        <p> TrailForks is a resource for finding and downloading trail maps for use on the go. </p>
+        <p> This last link is definitely not biased, but this store in my hometown, and the owner has two Britney Spaniels who will absolutely love you.</p>
+        <ol>
+        <li><a href="https://www.worldwidecyclery.com/pages/components?srsltid=AfmBOorlk9UwrycLiJQ5NM4a79CgXzfV6b_6Z0zeQdN5PYElnlaYAQhz">WorldWideCyclery</a></li>
+        <li><a href="https://www.backcountry.com/?srsltid=AfmBOooAhvPQnCQp69EEpk9JmewYtDHC-YayAQIuUCjeXOTZpxUjpjxk">BackCountry</a></li>
+        <li><a href="https://www.parktool.com/en-us/blog/repair-help">ParkTool</a></li>
+        <li><a href="https://www.trailforks.com/">TrailForks</a></li>
+        <li> <a href="https://www.google.com/search?client=firefox-b-1-d&q=south+bay+outfitters">Google Search of South Bay Outfitters</a></li>
+        </ol>
    </body>
 </html>
